objects/On_boarding_Task__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Assign_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Type__c</fullName>
        <label>Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hour(s)</fullName>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Hard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quantifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Onboarding Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Auto_Assign_del__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Business_Tasks</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>On_boarding_Task__c.Business</value>
        </filters>
        <label>All Business Tasks</label>
    </listViews>
    <listViews>
        <fullName>All_Operation_Tasks</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>On_boarding_Task__c.Operational</value>
        </filters>
        <label>All Operation Tasks</label>
    </listViews>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Steps</pluralLabel>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operational</fullName>
        <active>true</active>
        <label>Operational</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>